Updated version in pom.xml to 1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>pl.vgtworld</groupId>
 	<artifactId>photo-manager</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>photo-manager</name>
 	<url>http://maven.apache.org</url>
